Updated button style

--- a/assets/admin/css/panel-customizer.css
+++ b/assets/admin/css/panel-customizer.css
@@ -17,14 +17,14 @@
 	margin: .3125rem 0;
 	padding: .5rem 1.5rem 2.2rem;
 	flex-shrink: 0;
-	background: #1e9ff2;
-	border-color: #006CBF #0053A6 #0053A6;
-	box-shadow: 0 1px 0 #0053A6;
+	background: #666EE8;
+	border-color: #333BB5 #1A229C #1A229C;
+	box-shadow: 0 1px 0 #1A229C;
 	color: #fff;
 	text-decoration: none;
-	text-shadow: 0 -1px 1px #0053A6,1px 0 1px #0053A6,0 1px 1px #0053A6,-1px 0 1px #0053A6;
+	text-shadow: 0 -1px 1px #1A229C,1px 0 1px #1A229C,0 1px 1px #1A229C,-1px 0 1px #1A229C;
 	transition: background .3s ease;
 }
 #conj-lite-customizer-more-control .button-primary:hover {
-	background: #0586D9
+	background: #4D55CF;
 }
