--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -14,7 +14,7 @@
 }
 #conj-lite-upsell-banner__top-text {
 	padding: 15px 35px 25px 15px;
-	background-color: #1e9ff2;
+	background-color: #666EE8;
 	color: #fff;
 	display: flex;
 	align-items: baseline;
@@ -57,16 +57,16 @@
 	margin: 2rem auto 0.3125rem;
 	padding: .5rem 1.5rem 2.2rem;
 	flex-shrink: 0;
-	background: #1e9ff2;
-	border-color: #006CBF #0053A6 #0053A6;
-	box-shadow: 0 1px 0 #0053A6;
+	background: #666EE8;
+	border-color: #333BB5 #1A229C #1A229C;
+	box-shadow: 0 1px 0 #1A229C;
 	color: #fff;
 	text-decoration: none;
-	text-shadow: 0 -1px 1px #0053A6,1px 0 1px #0053A6,0 1px 1px #0053A6,-1px 0 1px #0053A6;
+	text-shadow: 0 -1px 1px #1A229C,1px 0 1px #1A229C,0 1px 1px #1A229C,-1px 0 1px #1A229C;
 	transition: background .3s ease;
 }
 #conj-lite-upsell-banner__message--inner .conj-lite-upsell-banner__message--inner-col1 .button-primary:hover {
-	background: #0586D9
+	background: #4D55CF;
 }
 #conj-lite-upsell-banner__message--inner .conj-lite-upsell-banner__message--inner-col1 .button-primary + small {
 	display: block;
